istio/istio-php/order-deloyment-svc.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: mircro-orders-deploy
  namespace: php-micro-istio
  labels:
    app: php-mircro-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-mircro-orders
  template:
    metadata:
      labels:
        app: php-mircro-orders
    spec:
      containers:
      - name: nginx
        image: lufeijun1234/nginx-micro-istio:v0.0.1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
      - name: php
        image: lufeijun1234/php-micro-istio-order:v0.0.1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9000
        lifecycle:
          postStart:
            exec:
              command: ["cp", "/laravel/.env", "/var/www/k8s-php"]
        volumeMounts:
         - name: order-env
           mountPath: /laravel
           readOnly: true  
      volumes:
        - name: order-env
          configMap:
            name: order-env

---
apiVersion: v1
kind: Service
metadata:
  name: mircro-orders-service
  namespace: php-micro-istio
  labels:
      app: mircro-orders-service
spec:
  selector:
    app: php-mircro-orders
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30181
  type: NodePort
