istio/istio-php/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-php-155-com
  namespace: php-micro-istio
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
