istio/istio-php/VirtualServiceIn.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-php-in-vs
  namespace: php-micro-istio
spec:
  hosts:
  - mircro-users-service
  http:
  - match:
    - uri:
        prefix: /api/user
    route:
    - destination:
        host: mircro-users-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/order
    route:
    - destination:
        host: mircro-orders-service
        port:
          number: 80
